Add simple browser favicon

--- a/wheel/index.html
+++ b/wheel/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fortnite: Risky Wheels</title>	
+	<title>Fortnite: Risky Wheels</title>
+	<link rel="shortcut icon" href="public/images/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="public/images/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" type="text/css" href="public/style/style.css">
 	<script type=text/javascript src=https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js></script>
 	<link rel=stylesheet type=text/css href=https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css>
