--- a/wheel/index.html
+++ b/wheel/index.html
@@ -10,6 +10,15 @@
 	<link rel=stylesheet type=text/css href=https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css>
 	<link rel=stylesheet href="https://fonts.googleapis.com/css?family=Noto+Sans">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125404892-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+		gtag('config', 'UA-125404892-1');
+	</script>
 </head>
 
 <body>
