Change ready button text to update

--- a/wheel/index.html
+++ b/wheel/index.html
@@ -53,7 +53,7 @@
 					{{end}}
 					</ul>
 					<input type="checkbox" id="selectAllUnnamed" onclick='SelectAll("selectAllUnnamed", "unnamedLocationCheckbox")'/>Select All<br><br>
-                    <input type="image" alt="submit" name="updateLocation" src="public/images/ready.jpg">
+                    <input type="image" alt="submit" name="updateLocation" src="public/images/update.png">
                 </div>
             </form>
         </div>
